add rest styles and finish project

--- a/views/checkSignature.ejs
+++ b/views/checkSignature.ejs
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Signature App</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+        body{
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            width: 100vw;
+            background: linear-gradient(#141e30, #243b55);
+            font-family: 'Poppins';
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 3rem;
+        }
+        .success{
+           
+            color: #5fa712;
+        }
+
+        .error{
+            color: #D8000C;
+        }
+    </style>
+    <title>Signature App | Verified </title>
 </head>
 <body>
     <div class="container">
