--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,14 +82,12 @@
     <form class="form" action="/signMessage" method="post">
         <div class="form__userBox box">
             <label class="box__label" for="message">
-                Twoja wiadomość
+                Your Message
             </label>
-            <textarea placeholder="Nadaj wiadomość..." class="box_areaInput" name="message" id="" cols="30" rows="10" ></textarea>
+            <textarea placeholder="Type message..." class="box_areaInput" name="message" id="" cols="30" rows="10" ></textarea>
             
-            <input class="box__submit" type="submit">
+            <input class="box__submit" type="submit" value="Send">
         </div>
-        
-        
     </form>
     
 </body>
