--- a/views/checkSignature.ejs
+++ b/views/checkSignature.ejs
@@ -20,6 +20,9 @@
             align-items: center;
             font-size: 2.5rem;
         }
+        .success,.error{
+            font-size: 3.5rem;
+        }
         .success{
            
             color: #74cd15;
@@ -42,9 +45,9 @@
 <body>
     <div class="container">
         <% if(locals.check){  %>
-            <h1 class="success">Your signature is correct &#128077</h1>
+            <h1 class="success">Twój plik został zweryfikowany pomyślnie &#128077</h1>
             <%}else{ %>
-                <h1 class="error">Your signature is incorrect &#128078</h1>
+                <h1 class="error">Twój podpis jest nieprawidłowy &#128078</h1>
         <% }%> 
     </div>
     
