--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Signature App | Form</title>
+    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         body{
@@ -65,6 +65,10 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
+        input[type="text"]:disabled {
+  background: #dddddd;
+}
         .box_areaInput{
             font-family: 'Poppins', sans-serif;
             /* padding: .4rem; */
@@ -84,9 +88,8 @@
             <label class="box__label" for="message">
                 Nadaj wiadomość
             </label>
-            <textarea placeholder="Type message..." class="box_areaInput" name="message" id="" cols="30" rows="10" ></textarea>
-            
-            <input class="box__submit" type="submit" value="Wygeneruj klucz">
+            <textarea placeholder="Wpisz wiadomość..." class="box_areaInput" name="message" id="" cols="30" rows="10" ></textarea>
+            <input  class="box__submit" type="submit" value="Wygeneruj klucz">
         </div>
     </form>
     
