filled error information

--- a/views/checkSignature.ejs
+++ b/views/checkSignature.ejs
@@ -47,7 +47,7 @@
         <% if(locals.check){  %>
             <h1 class="success">Twój plik został zweryfikowany pomyślnie &#128077</h1>
             <%}else{ %>
-                <h1 class="error">Twój podpis jest nieprawidłowy &#128078</h1>
+                <h1 class="error">Twój podpis jest nieprawidłowy lub przechwycono twoją wiadomość &#128078</h1>
         <% }%> 
     </div>
     
